# wisdom-tree

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  capture.py  detect_key.py  keypress_listener.py  requirements.txt  requirements_s2s.txt  run.sh  run_all.sh  s2s_service.py  wakeword_listener.py
src/: main.rs  pipeline.rs
