[package]
name = "wisdom-tree"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wisdom-tree"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter", "fmt"] }
anyhow             = "1"
rodio              = "0.17"
base64             = "0.22"
indicatif          = "0.17"
colored            = "2"
